# dead_code

./: .gitignore  CMakeLists.txt  LICENSE  README.md
input_data/drmemtrace.a.out.1719843.3337.dir/raw/: drmemtrace.a.out.1719844.0640.raw  drmemtrace.a.out.1719845.3030.raw  drmemtrace.a.out.1719846.1395.raw  drmemtrace.a.out.1719847.5981.raw
src/: analyzer.cpp  analyzer_runner.cpp  dead_code_analysis.cpp  dead_code_analysis.h  directory_iterator.cpp  directory_iterator.h  main.cpp  reader.cpp
src/trace/cpps/: dead_code_analysis.cpp
src/trace/headers/: dead_code_analysis.h
